fixed gaedi carousel teaser-image-text width on tablet / fixed indicator horizontal centering on mobile

--- a/hotelgaedi/src/scss/_gaedi_carousel.scss
+++ b/hotelgaedi/src/scss/_gaedi_carousel.scss
@@ -1,7 +1,14 @@
 .gaedi-carousel {
   &.teaser-image-text {
     overflow-x: hidden;
+    margin-right: 0;
     margin-top: toRem(160);
+    @include media($until: 'lg') {
+      max-width: 94%;
+    }
+    @include media($from: 'lg', $until: 'xl') {
+      max-width: 90%;
+    }
     @include media($from: 'xxl') {
       .carousel-inner {
         .wp-block-group__inner-container {
